--- a/webpage.html
+++ b/webpage.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        "text"
-</body>html>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
